--- a/Pages/ClinicSetup.cshtml
+++ b/Pages/ClinicSetup.cshtml
@@ -2,10 +2,11 @@
 @model CPTest.Pages.ClinicSetupModel
 @{
 }
+<div class="container">
+    <h1 style="text-align:center">Create clinic patterns</h1>
 
-<h1 style="text-align:center">Create clinic patterns</h1>
-
-<h2>Here be dragons... (it's a WIP)</h2>
+    <h2>Here be dragons... (it's a WIP)</h2>
+</div>
 
 <script>
 
