--- a/Pages/Privacy.cshtml
+++ b/Pages/Privacy.cshtml
@@ -3,8 +3,13 @@
 @{
     ViewData["Title"] = "Privacy Policy";
 }
-<h1>@ViewData["Title"]</h1>
 
-<p>...seriously? You actually want to know about our privacy policy?</p>
+<div class="container">
 
-<p>Okay... uh... if stuff is private, we won't tell anyone. :P</p>
+    <h1>@ViewData["Title"]</h1>
+
+    <p>...seriously? You actually want to know about our privacy policy?</p>
+
+    <p>Okay... uh... if stuff is private, we won't tell anyone. :P</p>
+
+</div>
