--- a/Pages/WIP.cshtml
+++ b/Pages/WIP.cshtml
@@ -3,8 +3,10 @@
 @{
 }
 
-<h1 class="text-center">Here be dragons!!!</h1>
+<div class="container">
+    <h1 class="text-center">Here be dragons!!!</h1>
 
-<p style="text-align:center"><img src="~/Images/dragon.jpg" /></p>
+    <p style="text-align:center"><img src="~/Images/dragon.jpg" /></p>
 
-<h2 class="text-center">(this page is not yet ready, please return from whence thou came)</h2>
+    <h2 class="text-center">(this page is not yet ready, please return from whence thou came)</h2>
+</div>
