--- a/Pages/Finished.cshtml
+++ b/Pages/Finished.cshtml
@@ -2,16 +2,20 @@
 
 @{
 }
-<div class="row mb-5 g-5">
-    <h1 style="text-align:center">Done</h1>
-</div>
 
-<div class="row mb-5 g-5">
+<div class="container">
+    <div class="row mb-5 g-5">
+        <h1 style="text-align:center">Done</h1>
+    </div>
+
+    <div class="row mb-5 g-5">
        
-        <div class="col-md-2" style="text-align: center">
-            <button id="btnClose" class="btn btn-success">Close</button>
-        </div>
-        <div class="col-md-4"></div>
+            <div class="col-md-2" style="text-align: center">
+                <button id="btnClose" class="btn btn-success">Close</button>
+            </div>
+            <div class="col-md-4"></div>
+    </div>
+
 </div>
 
 <script>
