--- a/Pages/Index.cshtml
+++ b/Pages/Index.cshtml
@@ -6,7 +6,7 @@
 
 <div class="container">
 
-    <div class="row mb-5 g-5">
+    <div class="row mb-5 g-5"> @*Header only - appears if clinician and/or clinic selected*@
         <div class="col-md-2" id="holding"></div>
         @if (Model.ClinicVenue != null)
         {
@@ -22,34 +22,19 @@
     <form id="ClinicSelect">
         <div class="row mb-5 g-5" >
             <div class="col-md-2" align="right">
-                <label>Week Commencing:</label>
+                <label>Week Commencing:</label> @*used to set the week view*@
             </div>
             <div class="col-md-4">
-                <input type="button" value="&laquo;" id="wcBack" /><input id="wcDate" name="wcDt" type="date" value=@Model.wcDateString /><input type="button" id="wcNext" value="&raquo;" />
+                <input type="button" value="&laquo;" id="wcBack" /><input id="wcDate" name="wcDt" type="date" asp-for=@Model.wcDate /><input type="button" id="wcNext" value="&raquo;" />
             </div>
         </div>
-        @* for measuring div placement
-        <div class="row mb-5 g-5">
-            <div class="col-md-1">1</div>
-            <div class="col-md-1">2</div>
-            <div class="col-md-1">3</div>
-            <div class="col-md-1">4</div>
-            <div class="col-md-1">5</div>
-            <div class="col-md-1">6</div>
-            <div class="col-md-1">7</div>
-            <div class="col-md-1">8</div>
-            <div class="col-md-1">9</div>
-            <div class="col-md-1">10</div>
-            <div class="col-md-1">11</div>
-            <div class="col-md-1">12</div>
-        </div>*@
-
+        
         <div class="row mb-5 g-5">
             <div class="col-md-1" align="right">
                 <label>Clinician:</label>
             </div>
-            <div class="col-md-2">
-                <select id="ddlClinician" onchange="SetClinician(value)">
+            <div class="col-md-2"> @*Clinician select*@
+                <select id="ddlClinician" name="strClinician" asp-for=@Model.sClinician>
                     @if (Model.StaffMember != null)
                     {
                         <option value="@Model.StaffMember" selected>@Model.StaffMember.NAME</option>
@@ -70,8 +55,8 @@
             <div class="col-md-2" align="right">
                 <label>Clinic:</label>
             </div>
-            <div class="col-md-2">
-                <select id="ddlClinic" onchange="SetClinic(value)">
+            <div class="col-md-2"> @*Clinic select*@
+                <select id="ddlClinic" name="strClinic" asp-for=@Model.sClinic>
                     @if (Model.ClinicVenue != null)
                     {
                         <option value="@Model.ClinicVenue" selected>@Model.ClinicVenue.NAME</option>
@@ -96,12 +81,6 @@
             <div class="col-md-1" align="right">
                 <input class="btn-success" type="button" id="btnClear" value="Clear" />
             </div>
-
-        </div>
-        @*This is necessary because the dropdown lists don't seem to want to retain their value on Get*@
-        <div id="metadata1">
-            <input id="txtClinician" name="strClinician" type="text" value=@Model.sClinician />
-            <input id="txtClinic" name="strClinic" type="text" value=@Model.sClinic />
         </div>
     </form>
 
@@ -135,9 +114,9 @@
                 <div class="row mb-5 g-5">
                     <input class="btn-success" type="button" id="btnAddWL" value="Add Patient to WL" />
                 </div>
-                @if (Model.WaitingLists != null)
+                @if (Model.waitingList != null)
                 {
-                    @foreach (var item in Model.WaitingLists)
+                    @foreach (var item in Model.waitingList)
                     {                
                         <div class="row" id=@item.MPI style="border:solid;background-color:darkcyan;color:ivory" draggable="true" ondragstart="OnDragStart(event)" ondragend="OnDragEnd(@item.MPI, event)" ondblclick="OnDoubleClickWL(@item.MPI, '@item.ClinicID', '@item.ClinicianID')">
                             <div>@item.FIRSTNAME @item.LASTNAME</div>
@@ -179,14 +158,6 @@
                         }                
                     </tbody>
                 </table>
-                @*Again, the metadata is needed to be able to push the parameters to the C#*@
-                    <div id="metadata2">
-                    <input id="txtAppClinician" name="strAppClinician" type="text"  />
-                    <input id="txtAppClinic" name="strAppClinic" type="text"  />
-                    <input id="txtAppDate" name="strAppDate" type="text"  />
-                    <input id="txtAppTime" name="strAppTime" type="text" />
-                    <input id="txtIntID" name="strIntID" type="text" />
-                </div>
             </form>       
         </div>
     </div>
@@ -206,7 +177,8 @@
         window.open("AddToWL");
     }
 
-    function GoBack()
+    @*Handles Next and Back buttons for the date selector*@
+    function GoBack() 
     {        
         var date = new Date(document.getElementById("wcDate").value);
         date.setDate(date.getDate() - 7);
@@ -222,14 +194,15 @@
         document.getElementById("ClinicSelect").submit();        
     }
 
+    @*Clear/reset the select menus*@
     function Clear()
     {
-        document.getElementById("txtClinician").value = ""
-        document.getElementById("txtClinic").value = ""
+        //document.getElementById("txtClinician").value = ""
+        //document.getElementById("txtClinic").value = ""
         document.getElementById("ddlClinician").value = ""
         document.getElementById("ddlClinic").value = ""
     }
-
+    @*
     function SetClinician(stClinician)
     {
         document.getElementById("txtClinician").value = stClinician
@@ -239,7 +212,9 @@
     {
         document.getElementById("txtClinic").value = stClinic
     }
+    *@
 
+    @*Drag-and-drop functionality*@
     function OnDragStart(ev)
     {  
         ev.dataTransfer.setData("text", ev.target.id);
@@ -274,19 +249,13 @@
             const MPI = draggableElement.id;
             //this is necessary to make sure SQL doesn't render it into American
             const apDateProper = apDate.slice(6,10) + "-" + apDate.slice(3,5) + "-" + apDate.slice(0,2);
-
-            //document.getElementById("txtIntID").value = intID;
-            //document.getElementById("txtAppClinician").value = apClin;
-            //document.getElementById("txtAppClinic").value = apVen;
-            //document.getElementById("txtAppDate").value = apDateProper;
-            //document.getElementById("txtAppTime").value = apTime;            
-
-            //document.getElementById("ClinicForm").submit();            
-            window.open("AppConfirm?sMPI=" + MPI + "&sClin=" + apClin + "&sVen=" + apVen + "&sDat=" + apDateProper + "&sTim=" + apTime + "&sDur=" + apDur);
-            document.getElementById("ClinicForm").submit();
+                 
+            //window.open("AppConfirm?sMPI=" + MPI + "&sClin=" + apClin + "&sVen=" + apVen + "&sDat=" + apDateProper + "&sTim=" + apTime + "&sDur=" + apDur);
+            window.location.replace ("AppConfirm?sMPI=" + MPI + "&sClin=" + apClin + "&sVen=" + apVen + "&sDat=" + apDateProper + "&sTim=" + apTime + "&sDur=" + apDur);
+            //document.getElementById("ClinicForm").submit();
         }        
     }
-
+    @*Sets highlight colours for drag/drop*@
     function OnDragOver(ev)
     {
        ev.preventDefault();
@@ -320,6 +289,7 @@
         {
             const str = document.getElementById(id).innerHTML;
             const sRID = str.slice(str.indexOf('R:') + 2);
+            //window.alert(str);
             //window.alert(sRID);
             
             window.open("AppModify?sRefID=" + sRID);
@@ -330,7 +300,7 @@
         }
         else if (document.getElementById(id).innerHTML.includes("PAST")) 
         {
-            window.alert("This is in the past, you cannot edit this.");
+            window.alert("This is in the past, you cannot edit this.");            
         }
     }
 
@@ -339,11 +309,9 @@
         document.getElementById("WaitingListForm").submit();
     }
 
-
+    @*Called at the start - sets the clinic matrix view*@
     function LoadClinics()
-    {        
-        document.getElementById("metadata1").hidden = true;
-        document.getElementById("metadata2").hidden = true;
+    {      
         var cMatrix = document.getElementById("ClinicMatrix");
         var timeArray = [];
         var dateArray = [];
@@ -362,9 +330,9 @@
         const today = new Date();
         today.setHours(0, 0, 0, 0);
         
-        @if (Model.ClinicSlots != null)
+        @if (Model.clinicSlots != null) //set up all the clinic slots first
         {
-            @foreach (var item in Model.ClinicSlots)
+            @foreach (var item in Model.clinicSlots)
             {
                 @:dateArray.push("@item.SlotDate");
                 @:timeArray.push("@item.SlotTime");   
@@ -375,8 +343,8 @@
                 //we need to create the arrays like this because we can't access the data otherwise
             }
         }
-
-        @if (Model.Appointments != null)
+                
+        @if (Model.Appointments != null) //then set up all the appointments
         {
             @foreach (var item in Model.Appointments)
             {
@@ -390,7 +358,7 @@
             }
         }
 
-
+        //Display all the existing clinic slots
         if(dateArray.length == 0 && timeArray.length == 0)
         {
             return;
@@ -452,7 +420,7 @@
             }
         }
         
-        //now do the same but with the appointment data
+        //now do the same but with the appointments
         if (apptDateArray.length != 0 && apptTimeArray.length != 0) 
         {
             for (var i = 0, row; row = cMatrix.rows[i]; i++) {
@@ -494,10 +462,10 @@
                     }
                 }
             }
-            //window.alert("done appts");
+            
         }
-        //finally, hide all empty rows
-        //window.alert("hide rows");
+        
+        //finally, hide all empty rows        
         for (var i = 0, row; row = cMatrix.rows[i]; i++) 
         {
             var colcount = 0
